# recruiter-agent

./: .gitignore
app/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src/components/: CallControls.tsx  CompletionChecklistModal.tsx  CoverageTracker.tsx  GenerateQuestionButton.tsx  InCallView.tsx  PostCallView.tsx  PreCallView.tsx  QuestionCard.tsx  SummaryView.tsx  TranscriptLine.tsx  TranscriptOverlay.tsx  VoiceCallOverlay.tsx  index.ts
app/src/hooks/: useVoiceCall.ts  useWebSocket.ts
app/src/pages/: JoinCall.tsx
app/src/types/: index.ts
app/src/utils/: api.ts
backend/: .env.example  __init__.py  agent.py  main.py  models.py  monitor_performance.py  prompts.py  pyproject.toml  requirements.txt  stt.py  test_latency.py  tools.py
