[project]
name = "recruiter-agent-backend"
version = "0.1.0"
description = "AI agent backend for recruiter assistance"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.128.2,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "websockets (>=16.0,<17.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "deepgram-sdk (>=5.3.2,<6.0.0)",
    "anthropic (>=0.78.0,<0.79.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "groq (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
